--- a/index-jp.html
+++ b/index-jp.html
@@ -33,18 +33,11 @@
 
     <section id="main">
       <h2>情報処理学会 国際AIプログラミングコンテスト: SamurAI Coding 2014-15</h2>
-      <p>インターネット産業の急速な発展によるエンジニアの質と量の確保が
-	ますます重要となっています。情報処理学会は若い世代から将来第一
-	線の研究者や開発者になりうる、また世界市場を舞台に活躍できる人
-	材を育てることを目的として、国際的なAIプログラミングコンテスト 
-	"SamurAI Coding" を 2012 年度および 2013 年度に開催いたしました
-	（<a href="2012photos.html">2012年度決勝の様子</a>、
+      <p>インターネット産業の急速な発展によるエンジニアの質と量の確保がますます重要となっています。情報処理学会は若い世代から将来第一	線の研究者や開発者になりうる、また世界市場を舞台に活躍できる人材を育てることを目的として、国際的なAIプログラミングコンテスト 
+	"SamurAI Coding" を 2012 年度および 2013 年度に開催いたしました（<a href="2012photos.html">2012年度決勝の様子</a>、
 	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2013年度決勝の結果</a>）。</p>
-      <p>今年度も SamurAI Coding 2014-15 を開催いたします。ゲームをテーマ
-	にしたプログラミングスキルを競い、予選を勝ち抜いたチームが2015年3月
-	に京都で開催する決勝へ進みます。決勝は情報処理学会 第77回全国大会
-	に併設される予定です。参加エンジニアはその能力が世界
-	で通用するか本コンテストを通じて試すことができます。</p>
+      <p>今年度も SamurAI Coding 2014-15 を開催いたします。ゲームをテーマにしたプログラミングスキルを競い、予選を勝ち抜いたチームが2015年3月	に京都で開催する決勝へ進みます。決勝は<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会 第77回全国大会</a>
+	に併設されます。参加エンジニアはその能力が世界で通用するか本コンテストを通じて試すことができます。</p>
     </section>
     <section id="news">
       <h2>ニュース</h2>
@@ -61,8 +54,10 @@
       <p>決勝出場者については、情報処理学会非会員の場合に情報処理学会の入会金（正会員のみ）および一年間の会費が無料となり、一年間の会員権を得ます。</br>
       会員権には、情報処理学会デジタルライブラリへのアクセス権利も含まれます。</p>
 
-      <p>また決勝出場者は、決勝出場の旅費補助を受けられます。</p>
-      <p>さらに決勝出場者は、コンテスト Web サイトに表彰されます。</p>
+      <p>決勝出場者は、京都大学にて開催の決勝への旅費補助を受けられます。昨年は、海外チームは10万円を上限として、国内チームは遠方からの参加の場合に実費相当を支援しました。今年は変更の可能性があります。
+</p>
+      <p>決勝出場者は、コンテスト Web サイトに表彰されます。</p>
+      <p>決勝における上位表彰者には副賞が提供される可能性があります。</p>
     </section>
 
     <section id="importantdates">
@@ -71,7 +66,7 @@
         <li>ルール公開、応募受付開始：2014年11月14日</li>
         <li>オンライン予選応募締切　：2014年12月21日</li>
         <li>オンライン予選結果発表　：2014年12月22日</li>
-        <li>決勝（於 京都大学） 　　：2015年 3月18日　※情報処理学会第77回全国大会併催</li>
+        <li>決勝（於 京都大学） 　　：2015年 3月18日　※<a href=""http://www.ipsj.or.jp/event/taikai/77/><情報処理学会第77回全国大会併催<</a>/li>
       </ul>
     </section>
 
