--- a/index-jp.html
+++ b/index-jp.html
@@ -66,7 +66,7 @@
         <li>ルール公開、応募受付開始：2014年11月14日</li>
         <li>オンライン予選応募締切　：2014年12月21日</li>
         <li>オンライン予選結果発表　：2014年12月22日</li>
-        <li>決勝（於 京都大学） 　　：2015年 3月18日　※<a href=""http://www.ipsj.or.jp/event/taikai/77/><情報処理学会第77回全国大会併催<</a>/li>
+        <li>決勝（於 京都大学） 　　：2015年 3月18日　※<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会第77回全国大会併催</a></li>
       </ul>
     </section>
 
