--- a/index-jp.html
+++ b/index-jp.html
@@ -79,29 +79,11 @@
 
     <section id="committee">
       <h2>委員会体制（2014.5現在）</h2>
-
-      <h3>委員長</h3>
-      <ul>
-        <li>鷲崎弘宜（早稲田大学）</li>
-      </ul>
-      <h3>エグゼクティブアドバイザー</h3>
-      <ul>
-        <li>竹内郁雄（東京大学名誉教授）</li>
-      </ul>
-      <h3>委員</h3>
-      <ul>
-        <li>近山隆（東京大学名誉教授）</li>
-        <li>高田眞吾（慶應義塾大学）</li>
-        <li>吉野松樹（日立製作所）</li>
-        <li>松原仁（はこだて未来大学）</li>
-        <li>坂本一憲（国立情報学研究所）</li>
-        <li>田中哲朗（東京大学）</li>
-        <li>本田澄（早稲田大学）</li>
-        <li>平石拓（京都大学）</li>
-        <li>佐藤靖治（早稲田大学）</li>
-        <li>安本慶一（奈良先端科学技術大学院大学）</li>
-        <li>新田淳（日立製作所）</li>
-      </ul>
+<p>鷲崎弘宜（早稲田大学, 委員長）, 竹内郁雄（東京大学名誉教授, エグゼクティブアドバイザー), 近山隆（東京大学名誉教授）, 
+高田眞吾（慶應義塾大学）,  吉野松樹（日立製作所）, 松原仁（はこだて未来大学）, 坂本一憲（国立情報学研究所）, 
+田中哲朗（東京大学）, 本田澄（早稲田大学）, 平石拓（京都大学）, 佐藤靖治（早稲田大学）, 
+安本慶一（奈良先端科学技術大学院大学）, 新田淳（日立製作所）
+</p>
     </section>
 
     <!--#include virtual="footer-jp.html" -->
