--- a/software-jp.html
+++ b/software-jp.html
@@ -30,11 +30,13 @@
 </header>
 <hr/>
 
-    <section id="importantdates">
-      <h2>予選</h2>
-      <p>最初に「参加登録」のリンク先において参加登録してください。その後、「ソフトウェア」のリンク先の実行サーバにログインのうえ、自身のプログラムを投稿してください。</p>
-      <p>投稿後、随時対戦が実施されその結果がサーバ上で公開されます。</p>
-      <p>投稿は「日程」にあるオンライン予選応募締切まで受け付けます。</p>
+    <section id="main">
+      <h2>Software</h2>
+      <ul>
+        <li><a href="http://arena.ai-comp.net/">オンライン対戦サーバー</a>
+        <li><a href="https://github.com/AI-comp/ai-comp.github.com/blob/master/doc/available_languages.md">オンライン対戦サーバーで使用可能な言語一覧</a>
+        <li><a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">サンプルAI</a>
+      </ul>
     </section>
 
 <footer>
