--- a/software.html
+++ b/software.html
@@ -29,11 +29,13 @@
 </header>
 <hr/>
 
-   <section id="importantdates">
-      <h2>Preliminary Round</h2>
-      <p>Firstly please sign up at the server linked from "Entry". After that please login and submit your program to the online game execution server linked from "Software".</p>
-      <p>After submission, match-up games will be automatically performed.</p>
-      <p>You can re-submit your program until the Preliminary round submission due specified at the "Schedule".</p>
+   <section id="main">
+      <h2>Software</h2>
+      <ul>
+        <li><a href="http://arena.ai-comp.net/">Online Execution Server</a>
+        <li><a href="https://github.com/AI-comp/ai-comp.github.com/blob/master/doc/available_languages.md">Languages Available on the Online Execution Server</a>
+        <li><a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">Sample AI</a>
+      </ul>
     </section>
 
 <footer>
