--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ aimings to cultivate the younger generation so they can become leading researche
     <section id="news">
       <h2>News</h2>
       <ul>
-      	<li>Nov 24: A bug in <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">example</a> has been resolved.
+      	<li>Nov 24: Bugs in <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">sample AI programs</a> has been resolved.
 	<li>Nov 14: <a href="http://arena.ai-comp.net/">The online execution server</a> has been opened. Please　check <a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">the game rule</a> .
 	<li>May 1: This preliminary website has been launched.
       </ul>
