--- a/index-jp.html
+++ b/index-jp.html
@@ -42,7 +42,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
-        <li>11月24日: <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">公開サンプル</a>を修正しました。
+        <li>11月24日: <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">サンプルAIプログラム</a>を修正しました。
         <li>11月14日: <a href="http://arena.ai-comp.net/">オンライン対戦サーバ</a>を公開しました。<a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">ゲームルール</a>もご参照ください。
 	<li>8月4日: <a href="sponsor-jp.html">スポンサーの募集</a>を開始しました。
 	<li>5月1日: 本予告サイトを立ち上げました。
