--- a/software.html
+++ b/software.html
@@ -32,7 +32,7 @@
    <section id="main">
       <h2>Software</h2>
       <ul>
-        <li><a href="http://arena.ai-comp.net/">Online Execution Server</a>: Submit an archive file of your AI programs in one of the following formats: zip, tar, tar.bz2, tar.gz.
+        <li><a href="http://arena.ai-comp.net/">Online Execution Server</a>: Submit an archive file of your AI programs in one of the following formats: zip, tar, tar.bz2, tar.gz. Please see <a href="http://arena.ai-comp.net/help"></a>How to Submit Your AI Program"</a> on the server for details. 
         <li><a href="https://github.com/AI-comp/ai-comp.github.com/blob/master/doc/available_languages.md">Languages Available on the Online Execution Server</a>: We support many programming languages. You can check the list. 
         <li><a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">Sample AI</a>: Sample program is available for 
         various major languages including C#, C++, Java, JavaScript, PHP, Python and Scala.
