--- a/software-jp.html
+++ b/software-jp.html
@@ -33,9 +33,11 @@
     <section id="main">
       <h2>Software</h2>
       <ul>
-        <li><a href="http://arena.ai-comp.net/">オンライン対戦サーバー</a>
-        <li><a href="https://github.com/AI-comp/ai-comp.github.com/blob/master/doc/available_languages.md">オンライン対戦サーバーで使用可能な言語一覧</a>
-        <li><a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">サンプルAI</a>
+        <li><a href="http://arena.ai-comp.net/">オンライン対戦サーバー</a>: AIプログラムのアーカイブファイルをzip, tar, tar.bz2, tar.gzのいずれかの形式で投稿してください。
+        投稿方法の詳細についてはサーバ上の <a href="http://arena.ai-comp.net/help">How to Submit Your AI Program</a> を参照してください。
+        <li><a href="https://github.com/AI-comp/ai-comp.github.com/blob/master/doc/available_languages.md">オンライン対戦サーバーで使用可能な言語一覧</a>: 計27のプログラミング言語をサポートしています。
+  
+        <li><a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">サンプルAI</a>:  C#, C++, Java, JavaScript, PHP, Python, Scalaの各言語用に用意しています。
       </ul>
     </section>
 
