--- a/index-jp.html
+++ b/index-jp.html
@@ -49,6 +49,13 @@
       </ul>
     </section>
 
+    <section id="registration">
+      <h2>参加登録</h2>
+      <p>最初に <a href="http://arena.ai-comp.net/users/sign_up">オンライン対戦サーバ</a>上でチームにつき一つのアカウントを作成してください。
+その後、チームの情報を <a href="https://docs.google.com/forms/d/1P0FHCEi8_3Pp00AYj71WAt7EVzPk9VQEz1MDmqrfD4s/viewform?c=0&w=1">参加登録</a> してください。
+</p>
+    </section>
+
     <section id="prize">
       <h2>特典</h2>
       <p>決勝出場者については、情報処理学会非会員の場合に情報処理学会の入会金（正会員のみ）および一年間の会費が無料となり、一年間の会員権を得ます。</br>
