--- a/index-jp.html
+++ b/index-jp.html
@@ -52,7 +52,9 @@
     <section id="registration">
       <h2>参加登録</h2>
       <p>最初に <a href="http://arena.ai-comp.net/users/sign_up">オンライン対戦サーバ</a>上でチームにつき一つのアカウントを作成してください。
-その後、チームの情報を <a href="https://docs.google.com/forms/d/1P0FHCEi8_3Pp00AYj71WAt7EVzPk9VQEz1MDmqrfD4s/viewform?c=0&w=1">参加登録</a> してください。
+続いて、チームの情報を <a href="https://docs.google.com/forms/d/1P0FHCEi8_3Pp00AYj71WAt7EVzPk9VQEz1MDmqrfD4s/viewform?c=0&w=1">参加登録</a> してください。
+参加登録後は、<a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">ルール</a> ならびに <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">サンプルAI</a> を参照のうえ、<a href="http://arena.ai-comp.net/">オンライン対戦サーバ</a> にログインし自身のAIプログラムのAIプログラムのアーカイブファイルをzip, tar, tar.bz2, tar.gzのいずれかの形式で投稿してください。 投稿方法の詳細についてはサーバ上の <a href="http://arena.ai-comp.net/help">How to Submit Your AI Program</a> を参照してください。
+	
 </p>
     </section>
 
