--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@ aimings to cultivate the younger generation so they can become leading researche
       </ul>
     </section>
 
+    <section id="registration">
+      <h2>Registration and Submission</h2>
+      <p>Firstly, make your team account on <a href="http://arena.ai-comp.net/users/sign_up">Online Execution Server</a>.
+After that, register your team information with <a href="https://docs.google.com/forms/d/1P0FHCEi8_3Pp00AYj71WAt7EVzPk9VQEz1MDmqrfD4s/viewform?c=0&w=1">Entry</a>. 
+Then submit an archive file of your AI programs to <a href="http://arena.ai-comp.net/">Online Execution Server</a> in one of the following formats: zip, tar, tar.bz2, tar.gz. Please see <a href="http://arena.ai-comp.net/help">How to Submit Your AI Program</a> on the server for details. 
+<a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">Rule</a> and 
+<a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">Sample AI program</a> are available. </p>
+
    <section id="prize">
       <h2>Prize</h2>
       <p>World Final contestants who are not IPSJ members will receive one-year IPSJ membership without any entry fee and annual fee. (The entry fee is originally necessary for IPSJ regular members.)</p>
