--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
     	<h2>IPSJ International AI Programming Contest: SamurAI Coding 2014-15</h2>
       </header>
       <p>As the Internet industry rapidly grows, there is an intensifying need for high quality engineers and programmers.
-	Information Processing Society of Japan (IPSJ) conducted the international AI programming contest "SamurAI Coding" in 2012 and 2013, 
-aimings to cultivate the younger generation so they can become leading researchers,
+	Information Processing Society of Japan (IPSJ) conducted the International AI programming Contest "SamurAI Coding" in 2012 and 2013, 
+aiming to cultivate the younger generation so they can become leading researchers,
 	developers and successful on global level 
 	(<a href="2012photos.html">1st SamurAI Coding Final Photos in 2012</a> and
 	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2nd Final Results in 2013</a>).
-      <p>3rd SamurAI Coding will held between September 2014 and March 2015.
-	Contestants will be competing their engineering skills for AI game programming and 
-	the winners of the preliminary round will move on to the final round, which will be held on March 18 2015 collocated with 77th IPSJ National Convention in Kyoto at <a href="http://www.kyoto-u.ac.jp/en/access/">Kyoto University</a>.
-	Participating engineers will be able to measure their skills on a global level through this contest.</p>
+      <p>3rd SamurAI Coding will be held between September 2014 and March 2015.
+	Contestants will compete their engineering skills for AI game programming. 
+	Winners of the preliminary round will move on to the final round, which will be held on March 18 2015 collocated with 77th IPSJ National Convention in Kyoto at <a href="http://www.kyoto-u.ac.jp/en/access/">Kyoto University</a>.
+	Participating engineers will be able to demonstrate their skills on a global level through this contest.</p>
     </section>
     <section id="news">
       <h2>News</h2>
