--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ aiming to cultivate the younger generation so they can become leading researcher
       <p>Firstly, make your team account on <a href="http://arena.ai-comp.net/users/sign_up">Online Execution Server</a>.
 After that, register your team information with <a href="https://docs.google.com/forms/d/1P0FHCEi8_3Pp00AYj71WAt7EVzPk9VQEz1MDmqrfD4s/viewform?c=0&w=1">Entry</a>. 
 Then submit an archive file of your AI programs to <a href="http://arena.ai-comp.net/">Online Execution Server</a> in one of the following formats: zip, tar, tar.bz2, tar.gz. Please see <a href="http://arena.ai-comp.net/help">How to Submit Your AI Program</a> on the server for details. 
-<a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">Rule</a> and 
+<a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">Rule</a> and 
 <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">Sample AI program</a> are available. </p>
 
    <section id="prize">
