--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ within Japan received full travel expenses.
               Graduate School of Informatics, Kyoto University<br>
               Academic Center for Computing and Media Studies, Kyoto University<br>
               International Information Science Foundation<br>
+              The Korean Institute of Information Scientists and Engineers<br>
             </p>
           </section>
       	</td>
