--- a/rule.html
+++ b/rule.html
@@ -90,6 +90,7 @@
               Academic Center for Computing and Media Studies, Kyoto University<br>
               International Information Science Foundation<br>
               Information technology Promotion Agency Japan<br>
+              The Korean Institute of Information Scientists and Engineers<br>
             </p>
           </section>
         </td>
