--- a/schedule-jp.html
+++ b/schedule-jp.html
@@ -81,6 +81,7 @@
               京都大学 情報学研究科<br>
               京都大学 学術情報メディアセンター<br>
               財団法人 情報科学国際交流財団<br>
+              The Korean Institute of Information Scientists and Engineers<br>
             </p>
           </section>
           <section id="backers">
