--- a/schedule.html
+++ b/schedule.html
@@ -88,6 +88,7 @@
               Graduate School of Informatics, Kyoto University<br>
               Academic Center for Computing and Media Studies, Kyoto University<br>
               International Information Science Foundation<br>
+              The Korean Institute of Information Scientists and Engineers<br>
             </p>
           </section>
         </td>
