--- a/sponsor-jp.html
+++ b/sponsor-jp.html
@@ -96,6 +96,7 @@ IPSJ International AI Programming Contest "SamurAI Coding" を開催
               京都大学 情報学研究科<br>
               京都大学 学術情報メディアセンター<br>
               財団法人 情報科学国際交流財団<br>
+              The Korean Institute of Information Scientists and Engineers<br>
             </p>
           </section>
           <section id="backers">
