--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ aiming to cultivate the younger generation so they can become leading researcher
     <section id="news">
       <h2>News</h2>
       <ul>
+      <li>Dec 12: Submission deadline has been extended to Jan 11. Prize information has been added. 
       	<li>Nov 24: Bugs in <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">sample AI programs</a> has been resolved.
 	<li>Nov 14: <a href="http://arena.ai-comp.net/">The online execution server</a> has been opened. Please　check <a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">the game rule</a> .
 	<li>May 1: This preliminary website has been launched.
@@ -63,6 +64,21 @@ Then submit an archive file of your AI programs to <a href="http://arena.ai-comp
 
    <section id="prize">
       <h2>Prize</h2>
+      
+      <p>
+      <b>For Preliminary round contestants (including World Finalists): </b>
+      </p>
+
+<p>Preliminary round contestants are invited to Banquet on the World final round date on a first-come, first-served basis; the number of Banquet participants is limited. </p>
+
+<p>Students will have a chance to attend events organized by Recruit Holdings for students on a priority basis (TBD). </p>
+
+<p>Students can freely attend sessions of the 77th IPSJ Annual Convention by register themselves at the <a href="http://www.ipsj.or.jp/event/taikai/77/adv_reserve.html">Convention site</a>.</p>
+
+<p><b>For World Finalists: </b><p>
+
+<p>Winners of World Final will receive prizes totaling 100,000JPY. Moreover there will be some Sponsor Awards and Gifts (TBD).</p>
+
       <p>World Final contestants who are not IPSJ members will receive one-year IPSJ membership without any entry fee and annual fee. (The entry fee is originally necessary for IPSJ regular members.)</p>
 
       <p>Travel expenses of World final contestants will be partially supported.
@@ -73,15 +89,14 @@ travel expenses up to 100,000JPY, and contestants from a long distance
 within Japan received full travel expenses. 
 </p>
       <p>All World Final contestants will be presented on the contest site. </p>
-      <p>Moreover winners of World Final might receive some prizes. (TBD)</p>
     </section>
 
     <section id="importantdates">
       <h2>Important Dates</h2>
       <ul>
       	<li>Rule and platform announcement, submission open: November 14th, 2014</li>
-      	<li>Preliminary round submission due: December 21st , 2014</li>
-      	<li>Preliminary round result announcement: December 22nd, 2014</li>
+      	<li><font color="red">Preliminary round submission due: January 11th, 2015 AoE (extended)</font></li>
+      	<li>Preliminary round result announcement: January 14th, 2015</li>
         <li>World final round in Kyoto (collocated with 77th IPSJ Annual Convention at <a href="http://www.kyoto-u.ac.jp/en/access/">Kyoto University</a>): March 18, 2015</li>
       </ul>
     </section>
