--- a/index.html
+++ b/index.html
@@ -143,12 +143,9 @@ within Japan received full travel expenses.
             <p><img src="images/1_Brandlogo_Color.jpg" width="200"/></p>
             <p>Indeed</p>
             <p><img src="images/indeed.png" width="200"/></p>
-      	    <h3>Shogun Sponsor</h3>
-      	    (TBD)
-      	    <h3>Platinum Sponsor</h3>
-      	    (TBD)
       	    <h3>Gold Sponsors</h3>
-      	    (TBD)
+      	    <p>e-Seikatsu Co., Ltd.</p>
+      	    <p>Hitachi, Ltd.</p>
       	  </section>
       	</td>
       	<td>
