--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Then submit an archive file of your AI programs to <a href="http://arena.ai-comp
 
 <p>Students can freely attend sessions of the 77th IPSJ Annual Convention by register themselves at the <a href="http://www.ipsj.or.jp/event/taikai/77/adv_reserve.html">Convention site</a>.</p>
 
-<p><b>For World Finalists: </b><p>
+<p><b>For World Finalists: </b></p>
 
 <p>Winners of World Final will receive prizes totaling 100,000JPY. Moreover there will be some Sponsor Awards and Gifts (TBD).</p>
 
