--- a/index-jp.html
+++ b/index-jp.html
@@ -42,6 +42,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+      <li>12月12日: 予選応募締め切りを2015年1月11日 AoE（日本時間 1月12日21:00）にまで延長しました。特典の情報を追加しました。
         <li>11月24日: <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">サンプルAIプログラム</a>を修正しました。
         <li>11月14日: <a href="http://arena.ai-comp.net/">オンライン対戦サーバ</a>を公開しました。<a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">ゲームルール</a>もご参照ください。
 	<li>8月4日: <a href="sponsor-jp.html">スポンサーの募集</a>を開始しました。
@@ -60,13 +61,33 @@
 
     <section id="prize">
       <h2>特典</h2>
-      <p>決勝出場者については、情報処理学会非会員の場合に情報処理学会の入会金（正会員のみ）および一年間の会費が無料となり、一年間の会員権を得ます。</br>
+      
+      <b>予選応募者（決勝出場者を含む）</b>
+
+<p>      
+予選応募者は、成績によらず決勝当日夜の懇親会に出席できます（ただし先着順、人数制限あり）。予選応募者や決勝出場者、スポンサー企業の皆様等との交流の場として懇親会を設けます。
+</p>
+<p>
+予選応募者のうちで学生の方は、希望によりイベントスポンサー リクルートホールディングスにおける学生向けイベントに優先参加できる予定です。
+</p>
+
+<p>
+学生の方は、<a href="http://www.ipsj.or.jp/event/taikai/77/adv_reserve.html">全国大会申込サイト</a>で別途申し込むことで第77回全国大会を無料聴講できます。
+</p>
+
+<b>決勝出場者</b>
+
+<p>
+決勝における上位表彰者には総額10万円の副賞が提供されます。さらに、スポンサーから企業賞や景品が提供される予定です。
+</p>
+
+
+    <p>決勝出場者については、情報処理学会非会員の場合に情報処理学会の入会金（正会員のみ）および一年間の会費が無料となり、一年間の会員権を得ます。</br>
       会員権には、情報処理学会デジタルライブラリへのアクセス権利も含まれます。</p>
 
       <p>決勝出場者は、京都大学にて開催の決勝への旅費補助を受けられます。昨年は、海外チームは10万円を上限として、国内チームは遠方からの参加の場合に実費相当を支援しました。今年は変更の可能性があります。
 </p>
       <p>決勝出場者は、コンテスト Web サイトに表彰されます。</p>
-      <p>決勝における上位表彰者には副賞が提供される可能性があります。</p>
     </section>
 
     <section id="importantdates">
@@ -78,6 +99,22 @@
         <li>決勝（於 京都大学） 　　：2015年 3月18日　※<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会第77回全国大会併催</a></li>
       </ul>
     </section>
+
+<section id="game">
+<p>
+本コンテストではAIプログラム同士をゲーム上で戦わせる対戦型AIプログラミングを実施します。
+参加者はプログラミングスキルに加えて、
+アルゴリズムやAIストラテジーの設計スキルで競い合います。
+題材となるゲームでは、
+プレイヤーが戦国大名になり、領主たちを交渉で味方に引き入れ、
+他の大名たちと争います。
+</p>
+
+<p>
+プログラミング言語としては、C、C++、C#、Java、Objective-C、PHP、Python、Ruby、Clojure、D、Erlang、
+Gauche、Go、Haskell、JavaScript、OCaml、Prologを含む全27言語に対応しています。
+</p>
+</section>
 
     <section class="centered">
       <p>(以下のスクリーンショットは関連する過去のコンテストJavaChallenge2014のものです。SamurAI Coding 2014-15は更新されたルール・プラットフォームを用います。)
