--- a/index-jp.html
+++ b/index-jp.html
@@ -149,13 +149,13 @@ Gauche、Go、Haskell、JavaScript、OCaml、Prologを含む全27言語に対応
         <td width="300">
           <section id="sponsors">
             <h3>イベントスポンサー</h3>
-            <p>リクルートホールディングス</p>
+            <p>株式会社リクルートホールディングス</p>
             <p><img src="images/1_Brandlogo_Color.jpg" width="200"/></p>
-            <p>Indeed</p>
+            <p>Indeed,Inc.</p>
             <p><img src="images/indeed.png" width="200"/></p>
-            <h3>将軍スポンサー</h3>
-            <h3>プラチナスポンサー</h3>
             <h3>ゴールドスポンサー</h3>
+ <p>株式会社いい生活</p>
+ <p>株式会社日立製作所</p>
           </section>
         </td>
         <td>
