--- a/index-jp.html
+++ b/index-jp.html
@@ -101,6 +101,7 @@
     </section>
 
 <section id="game">
+<h2>ゲーム内容</h2>
 <p>
 本コンテストではAIプログラム同士をゲーム上で戦わせる対戦型AIプログラミングを実施します。
 参加者はプログラミングスキルに加えて、
@@ -109,19 +110,24 @@
 プレイヤーが戦国大名になり、領主たちを交渉で味方に引き入れ、
 他の大名たちと争います。
 </p>
-
 <p>
 プログラミング言語としては、C、C++、C#、Java、Objective-C、PHP、Python、Ruby、Clojure、D、Erlang、
 Gauche、Go、Haskell、JavaScript、OCaml、Prologを含む全27言語に対応しています。
 </p>
 </section>
-
     <section class="centered">
       <p>(以下のスクリーンショットは関連する過去のコンテストJavaChallenge2014のものです。SamurAI Coding 2014-15は更新されたルール・プラットフォームを用います。)
       </p>
       <img src="images/JavaChallenge1.png" width="300" title="Lang Wars"/>
       <img src="images/JavaChallenge2.png" width="300" title="Lang Wars"/>
     </section>
+
+<section id="eligibility">
+<h2>参加資格</h2>
+<p>
+年齢制限はありません。どなたでもご参加いただけます。
+個人、またはチーム（メンバー数上限なし）のいずれの形でもご参加いただけます。
+</p>
 
     <section id="committee">
       <h2>委員会体制（2014.5現在）</h2>
