--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ aiming to cultivate the younger generation so they can become leading researcher
 
     <section id="registration">
       <h2>Registration and Submission</h2>
+
+<p>There is no age limit. Moreover contestants can participate in the contest as individual or team; there is no maximum number of team members.</p>
       <p>Firstly, make your team account on <a href="http://arena.ai-comp.net/users/sign_up">Online Execution Server</a>.
 After that, register your team information with <a href="https://docs.google.com/forms/d/1P0FHCEi8_3Pp00AYj71WAt7EVzPk9VQEz1MDmqrfD4s/viewform?c=0&w=1">Entry</a>. 
 Then submit an archive file of your AI programs to <a href="http://arena.ai-comp.net/">Online Execution Server</a> in one of the following formats: zip, tar, tar.bz2, tar.gz. Please see <a href="http://arena.ai-comp.net/help">How to Submit Your AI Program</a> on the server for details. 
@@ -101,6 +103,11 @@ within Japan received full travel expenses.
       </ul>
     </section>
 
+<section id="game">
+      <h2>Game and AI</h2n>
+<p>Contestants compete on their design and engineering skills of algorithms and AI strategies in addition to programming skills by creating AI program for a match-up game. Players act as "daimyo" (powerful feudal lords in pre-modern Japan) to compete with one another by drawing neutral liege lords to their side.</p>
+<p>Contestants can choose a certain programming language among 27 languages supported including C, C++, C#, Java, Objective-C, PHP, Python, Ruby, Clojure, D, Erlang, Gauche, Go, Haskell, JavaScript, OCaml and Prolog.</p> 
+</section>
     <section class="centered">
       <p>(The following screenshots are taken from a related contest JavaChallenge 2014. In the SamurAI Coding, newly revised game rule and platform are  used.)
       </p>
