--- a/schedule.html
+++ b/schedule.html
@@ -32,10 +32,10 @@
    <section id="importantdates">
       <h2>Important Dates</h2>
       <ul>
-        <li>Rule and platform announcement, submission open: November 14th, 2014</li>
-        <li>Preliminary round submission due: December 21st , 2014</li>
-        <li>Preliminary round result announcement: December 22nd, 2014</li>
-        <li>World final round in Kyoto (collocated with 77th IPSJ Annual Convention): March 18, 2015</li>
+      	<li>Rule and platform announcement, submission open: November 14th, 2014</li>
+      	<li><font color="red">Preliminary round submission due: January 11th, 2015 AoE (extended)</font></li>
+      	<li>Preliminary round result announcement: January 14th, 2015</li>
+        <li>World final round in Kyoto (collocated with 77th IPSJ Annual Convention at <a href="http://www.kyoto-u.ac.jp/en/access/">Kyoto University</a>): March 18, 2015</li>
       </ul>
     </section>
 
