--- a/schedule-jp.html
+++ b/schedule-jp.html
@@ -34,9 +34,9 @@
       <h2>主要日程</h2>
       <ul>
         <li>ルール公開、応募受付開始：2014年11月14日</li>
-        <li>オンライン予選応募締切　：2014年12月21日</li>
-        <li>オンライン予選結果発表　：2014年12月22日</li>
-        <li>決勝（於 京都大学） 　　：2015年 3月18日　※情報処理学会第77回全国大会併催</li>
+        <li><font color"red">オンライン予選応募締切　：2015年 1月11日 Anywhere On Earth（日本時間 1月12日 21:00）（延長しました）</font></li>
+        <li>オンライン予選結果発表　：2015年1月14日</li>
+        <li>決勝（於 京都大学） 　　：2015年 3月18日　※<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会第77回全国大会併催</a></li>
       </ul>
     </section>
 
