--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ within Japan received full travel expenses.
     </section>
 
 <section id="game">
-      <h2>Game and AI</h2n>
+      <h2>Game and AI</h2>
 <p>Contestants compete on their design and engineering skills of algorithms and AI strategies in addition to programming skills by creating AI program for a match-up game. Players act as "daimyo" (powerful feudal lords in pre-modern Japan) to compete with one another by drawing neutral liege lords to their side.</p>
 <p>Contestants can choose a certain programming language among 27 languages supported including C, C++, C#, Java, Objective-C, PHP, Python, Ruby, Clojure, D, Erlang, Gauche, Go, Haskell, JavaScript, OCaml and Prolog.</p> 
 </section>
@@ -146,9 +146,9 @@ within Japan received full travel expenses.
       	<td width="300">
       	  <section id="sponsors">
             <h3>Event Sponsor</h3>
-            <p>Recruit Holdings</p>
+            <p>Recruit Holdings Co.,Ltd.</p>
             <p><img src="images/1_Brandlogo_Color.jpg" width="200"/></p>
-            <p>Indeed</p>
+            <p>Indeed,Inc.</p>
             <p><img src="images/indeed.png" width="200"/></p>
       	    <h3>Gold Sponsors</h3>
       	    <p>e-Seikatsu Co., Ltd.</p>
