--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@ within Japan received full travel expenses.
       	  <section id="sponsors">
             <h3>Event Sponsor</h3>
             <p>Recruit Holdings Co.,Ltd.</p>
-            <p><img src="images/1_Brandlogo_Color.jpg" width="200"/></p>
+            <p><a href="http://www.recruit-rgf.com/"><img src="images/1_Brandlogo_Color.jpg" width="200"/></a></p>
             <p>Indeed,Inc.</p>
-            <p><img src="images/indeed.png" width="200"/></p>
+            <p><a href="http://www.indeed.com/"><img src="images/indeed.png" width="200"/></a></p>
       	    <h3>Gold Sponsors</h3>
       	    <p>e-Seikatsu Co., Ltd.</p>
       	    <p>Hitachi, Ltd.</p>
