--- a/index-jp.html
+++ b/index-jp.html
@@ -153,8 +153,8 @@ Gauche、Go、Haskell、JavaScript、OCaml、Prologを含む全27言語に対応
           <section id="sponsors">
             <h3>イベントスポンサー</h3>
             <p>株式会社リクルートホールディングス</p>
-            <p><img src="images/1_Brandlogo_Color.jpg" width="200"/></p>
-            <p>Indeed,Inc.</p>
+            <p><a href="http://www.recruit.jp/"><img src="images/1_Brandlogo_Color.jpg" width="200"/></a></p>
+            <p><a href="http://jp.indeed.com/">Indeed,Inc.</a></p>
             <p><img src="images/indeed.png" width="200"/></p>
             <h3>ゴールドスポンサー</h3>
  <p>株式会社いい生活</p>
