--- a/index-jp.html
+++ b/index-jp.html
@@ -146,7 +146,7 @@ Gauche、Go、Haskell、JavaScript、OCaml、Prologを含む全27言語に対応
             <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 ４階</p>
             <p>email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
           samurai2014-contact@ipsj.or.jp</a></p>
-          <img src="images/IPSJ_logoB_M.gif" width="200"/>
+          <a href="http://www.ipsj.or.jp/"><img src="images/IPSJ_logoB_M.gif" width="200"/></a>
           </section>
         </td>
         <td width="300">
