--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ within Japan received full travel expenses.
       		  samurai2014-contact@ipsj.or.jp</a><br>
             web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
             </p>
-            <img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/>
+            <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
       	  </section>
       	</td>
       	<td width="300">
