Add competition rules

--- a/final-jp.html
+++ b/final-jp.html
@@ -33,6 +33,88 @@
     <section id="importantdates">
       <h2>決勝</h2>
       <p>決勝は情報処理学会 第77回全国大会に併設される予定です。</p>
+
+
+      <h3>第1～第4試合</h3>
+
+      <p>決勝進出者の16チームから、トーナメント形式で最終試合進出者を決定します。トーナメントの組み合わせはランダムに決定します。 各試合とも1本先取とし、ゲームに勝利したチームを最終試合進出とします。</p>
+
+
+      <h3>最終試合</h3>
+
+      <p>3ゲーム行い、1ゲームごとに得られる下記の点数の合計が最も多いチームを優勝とします。</p>
+
+      <p>同順位のチームがいない場合は以下の点数を獲得します。<p>
+      <ul>
+        <li>1位： 18点
+        <li>2位： 4点
+        <li>3位： 2点
+        <li>4位： 0点
+      </ul>
+
+      <p>同順位のチームがいる場合は、以下のように点数を分け合います。</p>
+      <table border>
+        <thead>
+        <tr>
+          <th></th>
+          <th>1位</th>
+          <th>2位</th>
+          <th>3位</th>
+          <th>4位</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>1、2位がタイの場合</td>
+          <td>11点</td>
+          <td>11点</td>
+          <td>2点</td>
+          <td>0点</td>
+        </tr>
+        <tr>
+          <td>1、2、3位がタイの場合</td>
+          <td>8点</td>
+          <td>8点</td>
+          <td>8点</td>
+          <td>0点</td>
+        </tr>
+        <tr>
+          <td>1、2、3、4位がタイの場合</td>
+          <td>6点</td>
+          <td>6点</td>
+          <td>6点</td>
+          <td>6点</td>
+        </tr>
+        <tr>
+          <td>2、3位がタイの場合</td>
+          <td>18点</td>
+          <td>3点</td>
+          <td>3点</td>
+          <td>0点</td>
+        </tr>
+        <tr>
+          <td>2、3、4位がタイの場合</td>
+          <td>18点</td>
+          <td>2点</td>
+          <td>2点</td>
+          <td>2点</td>
+        </tr>
+        <tr>
+          <td>3、4位がタイの場合</td>
+          <td>18点</td>
+          <td>4点</td>
+          <td>1点</td>
+          <td>1点</td>
+        </tr>
+        <tr>
+          <td>1、2位がタイ、3、4位がタイの場合</td>
+          <td>11点</td>
+          <td>11点</td>
+          <td>1点</td>
+          <td>1点</td>
+        </tr>
+        </tbody>
+      </table>
     </section>
 
 <footer>
