--- a/final.html
+++ b/final.html
@@ -32,6 +32,90 @@
    <section id="importantdates">
       <h2>Final Round</h2>
       <p>The World final round will be held on March 18 2015 collocated with 77th IPSJ National Convention in Kyoto (TBD).</p>
+
+
+      <h3>First Match to Fourth Macth</h3>
+
+      <p>A knockout tournament will be used to choose who go up to the final match.
+      Matchings are decided randomly.
+      The winner of each match goes up to the final match.</p>
+
+
+      <h3>Final Match</h3>
+
+      <p>In the final match, three games will be played and teams get scores described below for each game. The team with the largest score wins the tournament.</p>
+
+      <p>When there is no tie, teams get the following score:<p>
+      <ul>
+        <li>1st place： 18 points
+        <li>2nd place： 4 points
+        <li>3rd place： 2 points
+        <li>4th place： 0 point
+      </ul>
+
+      <p>When there is a tie, teams get the following score:</p>
+      <table border>
+        <thead>
+        <tr>
+          <th></th>
+          <th>1st place</th>
+          <th>2nd place</th>
+          <th>3rd place</th>
+          <th>4th place</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>1st and 2nd are tied</td>
+          <td>11 points</td>
+          <td>11 points</td>
+          <td>2 points</td>
+          <td>0 point</td>
+        </tr>
+        <tr>
+          <td>1st, 2nd, and 3rd are tied</td>
+          <td>8 points</td>
+          <td>8 points</td>
+          <td>8 points</td>
+          <td>0 point</td>
+        </tr>
+        <tr>
+          <td>1st, 2nd, 3rd, and 4th are tied</td>
+          <td>6 points</td>
+          <td>6 points</td>
+          <td>6 points</td>
+          <td>6 points</td>
+        </tr>
+        <tr>
+          <td>2nd and 3rd are tied</td>
+          <td>18 points</td>
+          <td>3 points</td>
+          <td>3 points</td>
+          <td>0 point</td>
+        </tr>
+        <tr>
+          <td>2nd, 3rd, and 4th are tied</td>
+          <td>18 points</td>
+          <td>2 points</td>
+          <td>2 points</td>
+          <td>2 points</td>
+        </tr>
+        <tr>
+          <td>3rd and 4th are tied</td>
+          <td>18 points</td>
+          <td>4 points</td>
+          <td>1 point</td>
+          <td>1 point</td>
+        </tr>
+        <tr>
+          <td>1st and 2nd, are tied, and 3rd and 4th are tied</td>
+          <td>11 points</td>
+          <td>11 points</td>
+          <td>1 point</td>
+          <td>1 point</td>
+        </tr>
+        </tbody>
+      </table>
     </section>
 
 <footer>
