--- a/preliminary-jp.html
+++ b/preliminary-jp.html
@@ -32,9 +32,42 @@
 
     <section id="importantdates">
       <h2>予選</h2>
+
+
+      <h3>参加方法</h3>
       <p>最初に「参加登録」のリンク先において参加登録してください。その後、「ソフトウェア」のリンク先の実行サーバにログインのうえ、自身のプログラムを投稿してください。</p>
       <p>投稿後、随時対戦が実施されその結果がサーバ上で公開されます。</p>
       <p>投稿は「日程」にあるオンライン予選応募締切まで受け付けます。</p>
+
+
+      <h3>対戦ルール</h3>
+      <p>予選は、プログラム投稿締切の2014/11/9 8:30 (JST)後、<a href='http://arena.ai-comp.net/' target='_blank'>オンライン対戦サーバー</a>上で行われます。<br />
+      各チームがContest Serverに投稿したAIプログラムのうち、ActiveなAIプログラムのみが予選に使用されます。<br />
+      ActiveなAIプログラムは常に1つのみで、Submit an AIタブの最下部で確認できます。</p>
+
+      <p>レーティングを初期化した後に全体で多数の対戦を行い、成績に応じて各AIプログラムのレーティングを計算して、レーティングの高い上位16チームをWorld Finals進出とします。具体的手順は以下の通りです。<br />
+      <ol>
+        <li>AIプログラムの数が4の倍数でない場合、不足分をダミーAIプログラムで補填する。
+        <li>各AIプログラムのレーティングを0に設定する。
+        <li>全体をAIプログラム4個ずつにランダムに分ける。
+        <li>4個のAIプログラムごとに1ゲーム行う。
+        <li>各AIプログラムのレーティングを更新する。
+        <li>3から5を100回繰り返す。
+      </ol>
+
+      <p>本ゲームで使用するレーティング方式は、ELOレーティングに従います。ただし、オリジナルのELOレーティングは1対1での対戦を想定しているため、本ゲーム用に拡張したものを使用します。</p>
+      <ul>
+        <li>勝者が存在する場合
+          <ol>
+            <li>勝者をA、敗者をそれぞれB、C、Dとする。
+            <li>「A対B」、「A対C」、「A対D」の3ゲームが行われ、それぞれAが勝利したものとしてレーティングを更新する。また、「B対C」、「B対D」、「C対D」の3ゲームが行われ、それぞれ引き分けたものとしてレーティングを更新する。なお、手順2のレーティングの更新は全て同時に行われる。
+          </ol>
+        <li>ゲームが引き分けた場合
+          <ol>
+            <li>プレイヤーをそれぞれA、B、C、Dとする。
+            <li>「A対B」、「A対C」、「A対D」、「B対C」、「B対D」、「C対D」の6ゲームが行われ、それぞれ引き分けたものとしてレーティングを更新する。なお、手順2のレーティングの更新は全て同時に行われる。
+          </ol>
+      </ul>
     </section>
 
 <footer>
