--- a/preliminary-jp.html
+++ b/preliminary-jp.html
@@ -32,20 +32,23 @@
 
     <section id="importantdates">
       <h2>予選</h2>
+      <p>予選は、プログラム投稿締切の2014/11/9 8:30 (JST)後、<a href='http://arena.ai-comp.net/' target='_blank'>オンライン対戦サーバー</a>上で行われます。
+      各チームがContest Serverに投稿したAIプログラムのうち、ActiveなAIプログラムのみが予選に使用されます。
+      ActiveなAIプログラムは常に1つのみで、Submit an AIタブの最下部で確認できます。</p>
+      <p><a href="http://goo.gl/forms/pUwQG78Xlq">参加登録</a>を行ったチームから16チームが決勝へ進出します。
+      決勝進出の16チームのうち、10チームは後述のレーティング上位者が選抜され、残り6チームは地域バランス等を考慮の上、成績優秀なチームが選抜される予定です。</p>
 
 
       <h3>参加方法</h3>
-      <p>最初に「参加登録」のリンク先において参加登録してください。その後、「ソフトウェア」のリンク先の実行サーバにログインのうえ、自身のプログラムを投稿してください。</p>
-      <p>投稿後、随時対戦が実施されその結果がサーバ上で公開されます。</p>
-      <p>投稿は「日程」にあるオンライン予選応募締切まで受け付けます。</p>
+      <p>最初に<a href="http://goo.gl/forms/pUwQG78Xlq">参加登録</a>を行ってください。
+      その後、<a href='http://arena.ai-comp.net/' target='_blank'>オンライン対戦サーバー</a>にて自身のプログラムを投稿してください。</p>
+      <p>投稿は<a href="schedule-jp.html">日程</a>にあるオンライン予選応募締切まで受け付けます。</p>
 
 
       <h3>対戦ルール</h3>
-      <p>予選は、プログラム投稿締切の2014/11/9 8:30 (JST)後、<a href='http://arena.ai-comp.net/' target='_blank'>オンライン対戦サーバー</a>上で行われます。<br />
-      各チームがContest Serverに投稿したAIプログラムのうち、ActiveなAIプログラムのみが予選に使用されます。<br />
-      ActiveなAIプログラムは常に1つのみで、Submit an AIタブの最下部で確認できます。</p>
-
-      <p>レーティングを初期化した後に全体で多数の対戦を行い、成績に応じて各AIプログラムのレーティングを計算して、レーティングの高い上位16チームをWorld Finals進出とします。具体的手順は以下の通りです。<br />
+      <p>レーティングを初期化した後に、全体で一定回数の対戦を行います。
+      各試合の結果に応じて各AIプログラムのレーティングが計算され、レーティングに基づいて決勝進出チームが決定されます。
+      対戦の具体的手順は以下の通りです。</p>
       <ol>
         <li>AIプログラムの数が4の倍数でない場合、不足分をダミーAIプログラムで補填する。
         <li>各AIプログラムのレーティングを0に設定する。
