--- a/preliminary.html
+++ b/preliminary.html
@@ -31,22 +31,23 @@
 
    <section id="importantdates">
       <h2>Preliminary Round</h2>
+      <p>The preliminary round will be held on the <a href='http://arena.ai-comp.net/' target='_blank'>online execution server</a> after the submission deadline (2014/11/9 8:30 [JST]).
+      Only an "active" AI will be used for each team.
+      Each team has one active AI, which you can see at the bottom of the "Submit an AI" tab in the online execution server.</p>
+      <p>Among teams which have made an <a href="http://goo.gl/forms/pUwQG78Xlq">entry</a>, 16 teams will advance to the final round.
+      10 teams with the highest ratings (described below) are chosen for the final round.
+      Also 6 teams with a good result are expected to be chosen in consideratin of region balance.</p>
 
 
       <h3>How to Participate</h3>
-      <p>Firstly please sign up at the server linked from "Entry". After that please login and submit your program to the online game execution server linked from "Software".</p>
-      <p>After submission, match-up games will be automatically performed.</p>
-      <p>You can re-submit your program until the Preliminary round submission due specified at the "Schedule".</p>
+      <p>Firstly please make an <a href="http://goo.gl/forms/pUwQG78Xlq">entry</a>. After that please submit your program to the <a href='http://arena.ai-comp.net/' target='_blank'>online execution server</a>.</p>
+      <p>You can re-submit your program until the Preliminary round submission due specified at the <a href="schedule-jp.html">schedule</a>.</p>
 
 
       <h3>Competetion Rules</h3>
-      <p>The preliminary round will be held on <a href='http://arena.ai-comp.net/' target='_blank'>the online execution server</a> after the submission deadline (2014/11/9 8:30 [JST]).
-      Only an "active" AI will be used for each team.
-      Each team has one active AI, which you can see at the bottom of the "Submit an AI" tab in the online execution server.</p>
 
       <p>In the preliminary round, AI programs will be matched one another after reseting the rating.
-      Their ratings are calculated based on the result of the matches.
-      ***
+      Their ratings are calculated based on the result of each match, and finalists are chosen based on the ratings.
       The procedure is as follows:
       <ol>
         <li>If the number of AI programs is not a multiple of 4, fill it with dummy AI programs.
