--- a/index-jp.html
+++ b/index-jp.html
@@ -120,10 +120,8 @@ Gauche、Go、Haskell、JavaScript、OCaml、Prologを含む全27言語に対応
 </p>
 </section>
     <section class="centered">
-      <p>(以下のスクリーンショットは関連する過去のコンテストJavaChallenge2014のものです。SamurAI Coding 2014-15は更新されたルール・プラットフォームを用います。)
-      </p>
-      <img src="images/JavaChallenge1.png" width="300" title="Lang Wars"/>
-      <img src="images/JavaChallenge2.png" width="300" title="Lang Wars"/>
+      <img src="images/ss1.png" width="300" title="Screenshot"/>
+      <img src="images/ss2.png" width="300" title="Screenshot"/>
     </section>
 
     <section id="committee">
