--- a/index.html
+++ b/index.html
@@ -109,10 +109,8 @@ within Japan received full travel expenses.
 <p>Contestants can choose a certain programming language among 27 languages supported including C, C++, C#, Java, Objective-C, PHP, Python, Ruby, Clojure, D, Erlang, Gauche, Go, Haskell, JavaScript, OCaml and Prolog.</p> 
 </section>
     <section class="centered">
-      <p>(The following screenshots are taken from a related contest JavaChallenge 2014. In the SamurAI Coding, newly revised game rule and platform are  used.)
-      </p>
-      <img src="images/JavaChallenge1.png" width="300" title="Lang Wars"/>
-      <img src="images/JavaChallenge2.png" width="300" title="Lang Wars"/>
+      <img src="images/ss1.png" width="300" title="Screenshot"/>
+      <img src="images/ss2.png" width="300" title="Screenshot"/>
     </section>
 
     <section id="committee">
