--- a/index-jp.html
+++ b/index-jp.html
@@ -42,11 +42,12 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
-      <li>12月12日: 予選応募締め切りを2015年1月11日 AoE（日本時間 1月12日21:00）にまで延長しました。特典の情報を追加しました。
+        <li>12月13日: <a href="preliminary.html">予選</a>および<a href="final.html">決勝</a>の情報を公開しました。
+        <li>12月12日: 予選応募締め切りを2015年1月11日 AoE（日本時間 1月12日21:00）にまで延長しました。特典の情報を追加しました。
         <li>11月24日: <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">サンプルAIプログラム</a>を修正しました。
         <li>11月14日: <a href="http://arena.ai-comp.net/">オンライン対戦サーバ</a>を公開しました。<a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">ゲームルール</a>もご参照ください。
-	<li>8月4日: <a href="sponsor-jp.html">スポンサーの募集</a>を開始しました。
-	<li>5月1日: 本予告サイトを立ち上げました。
+        <li>8月4日: <a href="sponsor-jp.html">スポンサーの募集</a>を開始しました。
+        <li>5月1日: 本予告サイトを立ち上げました。
       </ul>
     </section>
 
