--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@ aiming to cultivate the younger generation so they can become leading researcher
     <section id="news">
       <h2>News</h2>
       <ul>
-      <li>Dec 12: Submission deadline has been extended to Jan 11. Prize information has been added. 
-      	<li>Nov 24: Bugs in <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">sample AI programs</a> has been resolved.
-	<li>Nov 14: <a href="http://arena.ai-comp.net/">The online execution server</a> has been opened. Please　check <a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">the game rule</a> .
-	<li>May 1: This preliminary website has been launched.
+        <li>Dec 13: Information about the <a href="preliminary.html">preliminary round</a> and the <a href="final.html">final round</a> has been added.
+        <li>Dec 12: Submission deadline has been extended to Jan 11. Prize information has been added. 
+      	<li>Nov 24: Bugs in <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">sample AI programs</a> have been resolved.
+        <li>Nov 14: <a href="http://arena.ai-comp.net/">The online execution server</a> has been opened. Please　check <a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">the game rule</a> .
+        <li>May 1: This preliminary website has been launched.
       </ul>
     </section>
 
