--- a/preliminary-jp.html
+++ b/preliminary-jp.html
@@ -32,7 +32,7 @@
 
     <section id="importantdates">
       <h2>予選</h2>
-      <p>予選は、プログラム投稿締切の2014/11/9 8:30 (JST)後、<a href='http://arena.ai-comp.net/' target='_blank'>オンライン対戦サーバー</a>上で行われます。
+      <p>予選は、プログラム投稿締切後、<a href='http://arena.ai-comp.net/' target='_blank'>オンライン対戦サーバー</a>上で行われます。
       各チームがContest Serverに投稿したAIプログラムのうち、ActiveなAIプログラムのみが予選に使用されます。
       ActiveなAIプログラムは常に1つのみで、Submit an AIタブの最下部で確認できます。</p>
       <p><a href="http://goo.gl/forms/pUwQG78Xlq">参加登録</a>を行ったチームから16チームが決勝へ進出します。
