--- a/preliminary.html
+++ b/preliminary.html
@@ -31,7 +31,7 @@
 
    <section id="importantdates">
       <h2>Preliminary Round</h2>
-      <p>The preliminary round will be held on the <a href='http://arena.ai-comp.net/' target='_blank'>online execution server</a> after the submission deadline (2014/11/9 8:30 [JST]).
+      <p>The preliminary round will be held on the <a href='http://arena.ai-comp.net/' target='_blank'>online execution server</a> after the submission deadline.
       Only an "active" AI will be used for each team.
       Each team has one active AI, which you can see at the bottom of the "Submit an AI" tab in the online execution server.</p>
       <p>Among teams which have made an <a href="http://goo.gl/forms/pUwQG78Xlq">entry</a>, 16 teams will advance to the final round.
